Bug 91464 - vertical-align: middle causes overflow with subpixel layout
Summary: vertical-align: middle causes overflow with subpixel layout
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Emil A Eklund
URL:
Keywords:
: 90169 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-07-16 19:34 PDT by Emil A Eklund
Modified: 2012-07-19 02:11 PDT (History)
3 users (show)

See Also:


Attachments
Patch (111.80 KB, patch)
2012-07-17 11:12 PDT, Emil A Eklund
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Emil A Eklund 2012-07-16 19:34:38 PDT
Using vertical-align: middle in combination with an overflow value other than visible can cause the overflow height to be computed incorrectly.

Downstream chromium bug: http://code.google.com/p/chromium/issues/detail?id=130888
Comment 1 Emil A Eklund 2012-07-17 11:12:49 PDT
Created attachment 152789 [details]
Patch
Comment 2 Eric Seidel (no email) 2012-07-17 11:49:42 PDT
Comment on attachment 152789 [details]
Patch

OK.
Comment 3 Emil A Eklund 2012-07-17 15:51:53 PDT
Committed r122883: <http://trac.webkit.org/changeset/122883>
Comment 4 Jer Noble 2012-07-18 16:54:53 PDT
The platform/mac/fast/inline/002-expected.txt and platform/mac/fast/table/table-display-types-strict-expected.txt files added by this commit have been broken since they were committed on the Apple Lion bots.

See:
http://build.webkit.org/results/Apple%20Lion%20Release%20WK1%20(Tests)/r122883%20(1232)/results.html
http://build.webkit.org/results/Apple%20Lion%20Release%20WK1%20(Tests)/r122883%20(1232)/fast/inline/002-pretty-diff.html
http://build.webkit.org/results/Apple%20Lion%20Release%20WK1%20(Tests)/r122883%20(1232)/fast/table/table-display-types-strict-pretty-diff.html
Comment 5 Emil A Eklund 2012-07-18 16:56:49 PDT
(In reply to comment #4)
> The platform/mac/fast/inline/002-expected.txt and platform/mac/fast/table/table-display-types-strict-expected.txt files added by this commit have been broken since they were committed on the Apple Lion bots.
> 
> See:
> http://build.webkit.org/results/Apple%20Lion%20Release%20WK1%20(Tests)/r122883%20(1232)/results.html
> http://build.webkit.org/results/Apple%20Lion%20Release%20WK1%20(Tests)/r122883%20(1232)/fast/inline/002-pretty-diff.html
> http://build.webkit.org/results/Apple%20Lion%20Release%20WK1%20(Tests)/r122883%20(1232)/fast/table/table-display-types-strict-pretty-diff.html

Sorry about that, looking into it now.
Comment 6 Jer Noble 2012-07-18 17:34:16 PDT
Reverted the changes to the platform/mac expected results in http://trac.webkit.org/changeset/123053.
Comment 7 Emil A Eklund 2012-07-18 19:21:34 PDT
Thank you.
Comment 8 Dominik Röttsches (drott) 2012-07-19 02:11:47 PDT
*** Bug 90169 has been marked as a duplicate of this bug. ***