vertical-align: middle causes overflow with subpixel layout https://bugs.webkit.org/show_bug.cgi?id=91464

Reviewed by Eric Seidel.

Source/WebCore:

Using vertical-align: middle in combination with an overflow value other
than visible can cause the overflow height to be computed incorrectly.

Test: fast/sub-pixel/vertical-align-middle-overflow.html

* rendering/RootInlineBox.cpp:
(WebCore::RootInlineBox::verticalPositionForBox):
Round verticalPosition after calculation instead of flooring the result
of the xHeight calculation. By flooring it the resulting value is in
effect rounded up which can cause the height of the box to grow by one.
By rounding the resulting value thevertical position is more accurate and
the off by one error is avoided.

LayoutTests:

Add new test for vertical-align: middle and adjust existing results to
reflect the improved alignment calculation.

* fast/sub-pixel/vertical-align-middle-overflow-expected.txt: Added.
* fast/sub-pixel/vertical-align-middle-overflow.html: Added.
* platform/chromium-linux/css2.1/t100801-c544-valgn-03-d-agi-expected.png:
* platform/chromium-linux/css2.1/t100801-c544-valgn-03-d-agi-expected.txt:
* platform/chromium-linux/fast/inline-block/inline-block-vertical-align-expected.png:
* platform/chromium-linux/fast/inline/002-expected.png:
* platform/chromium-linux/fast/table/table-display-types-strict-expected.png:
* platform/chromium-linux/tables/mozilla/bugs/bug4527-expected.png:
* platform/chromium-mac-snowleopard/css2.1/t100801-c544-valgn-03-d-agi-expected.png:
* platform/chromium-mac-snowleopard/fast/block/basic/014-expected.png:
* platform/chromium-mac-snowleopard/fast/css/line-height-determined-by-primary-font-expected.png:
* platform/chromium-mac-snowleopard/fast/inline/002-expected.png:
* platform/chromium-mac-snowleopard/fast/table/table-display-types-strict-expected.png:
* platform/chromium-mac-snowleopard/fast/text/international/bidi-LDB-2-CSS-expected.png:
* platform/chromium-mac-snowleopard/fast/text/international/bidi-LDB-2-HTML-expected.png:
* platform/chromium-mac-snowleopard/fast/text/international/bidi-LDB-2-formatting-characters-expected.png:
* platform/chromium-mac-snowleopard/tables/mozilla/bugs/bug4527-expected.png:
* platform/chromium-mac/css1/text_properties/vertical_align-expected.txt:
* platform/chromium-mac/css2.1/t100801-c544-valgn-03-d-agi-expected.txt:
* platform/chromium-mac/fast/block/basic/014-expected.txt:
* platform/chromium-mac/fast/inline-block/inline-block-vertical-align-expected.txt:
* platform/chromium-mac/fast/text/international/bidi-LDB-2-CSS-expected.txt:
* platform/chromium-mac/fast/text/international/bidi-LDB-2-HTML-expected.txt:
* platform/chromium-mac/fast/text/international/bidi-LDB-2-formatting-characters-expected.txt:
* platform/chromium-mac/tables/mozilla/bugs/bug4527-expected.txt:
* platform/chromium-win/css1/text_properties/vertical_align-expected.txt:
* platform/chromium-win/fast/block/basic/014-expected.txt:
* platform/chromium-win/fast/inline-block/inline-block-vertical-align-expected.txt:
* platform/chromium-win/fast/inline/002-expected.txt:
* platform/chromium-win/fast/table/table-display-types-strict-expected.txt:
* platform/chromium-win/tables/mozilla/bugs/bug4527-expected.txt:
* platform/mac/fast/inline/002-expected.txt:
* platform/mac/fast/replaced/008-expected.png:
* platform/mac/fast/table/table-display-types-strict-expected.txt:


Canonical link: https://commits.webkit.org/109342@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122883 268f45cc-cd09-0410-ab3c-d52691b4dbfc